--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@ input::placeholder{color:rgba(148,163,184,0.5)}
     <form id="loginForm">
       <div class="form-group">
         <label for="email">College Email</label>
-        <input type="email" id="email" placeholder="your.name@americancollege.edu.in" required>
+        <input type="email" id="email" placeholder="Enter your college Id" required>
         <div class="email-hint">⚠️ Use your @americancollege.edu.in email</div>
       </div>
       
@@ -163,3 +163,4 @@ function hideAlerts() {
 
 </body>
 </html>
+
